# llm-taskbench

./: .env.example  .gitignore  CLAUDE.md  COMPLETION-REPORT.md  Dockerfile  LLMTaskBench-Vision.md  README.md  RunTaskBench.sh  Todo.md  USAGE.md  docker-compose.cli.yml  docker-compose.ui.yml  docker-compose.yml  implementation-plan.md  lecture_transcript.html  lecture_transcript.txt  pyproject.toml  requirements.txt  ui_app.py
.claude/: settings.local.json
backend/: Dockerfile  alembic.ini  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/: evaluations.py  tasks.py
backend/app/core/: __init__.py  config.py  database.py  metrics.py  quality_gen.py
backend/app/models/: __init__.py  database.py
backend/app/schemas/: __init__.py  evaluation.py  task.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: conftest.py  test_metrics.py  test_quality_gen.py
config/: models.yaml
docs/: API.md  ARCHITECTURE.md  HANDOFF.md  INTEGRATION-TASK-LIST.md  PROJECT-OVERVIEW.md  QUICK-OVERVIEW.md  TODO.md  Todo.md  USAGE.md  claude-task-list.md  openrouter-cost-tracking-guide.md  run-analysis.md  technical-spec.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: EvaluationRunner.tsx  UseCaseEvaluationRunner.tsx
frontend/src/types/: index.ts
results/00-lecture-concept-extraction/: 2025-12-31_134109_lecture-01-python-basics.json  2025-12-31_141529_lecture-01-python-basics.json
results/01-meeting-action-items/: 2025-12-31_132547_meeting-01-standup.json  2025-12-31_141652_meeting-01-standup.json
results/02-bug-report-triage/: 2025-12-31_132731_bug-reports.json  2025-12-31_141841_bug-reports.json
results/03-regex-generation/: 2025-12-31_132834_regex-challenges.json  2025-12-31_141957_regex-challenges.json
results/04-data-cleaning-rules/: 2025-12-31_133026_customers-messy.json  2025-12-31_142150_customers-messy.json
sample-use-cases/00-lecture-concept-extraction/: USE-CASE.md
sample-use-cases/00-lecture-concept-extraction/data/: lecture-02-ml-fundamentals.txt
sample-use-cases/00-lecture-concept-extraction/ground-truth/: lecture-01-concepts.csv  lecture-01-metadata.json  lecture-03-concepts.csv
sample-use-cases/01-meeting-action-items/: USE-CASE.md
sample-use-cases/01-meeting-action-items/data/: meeting-02-planning.txt  meeting-03-incident.txt
sample-use-cases/01-meeting-action-items/ground-truth/: meeting-02-planning.json  meeting-03-incident.json
sample-use-cases/02-bug-report-triage/: USE-CASE.md
sample-use-cases/02-bug-report-triage/ground-truth/: bug-reports-labeled.json
sample-use-cases/03-regex-generation/: USE-CASE.md
sample-use-cases/03-regex-generation/ground-truth/: regex-solutions.json
sample-use-cases/04-data-cleaning-rules/: USE-CASE.md
sample-use-cases/04-data-cleaning-rules/data/: customers-messy.csv
sample-usecases/: README.md
sample-usecases/00-lecture-concept-extraction/: generated-prompts.json  taskbench-results.md
sample-usecases/00-lecture-concept-extraction/data/: lecture-01-python-basics.txt  lecture-03-system-design.txt
sample-usecases/01-meeting-action-items/: generated-prompts.json  taskbench-results.md
sample-usecases/02-bug-report-triage/: generated-prompts.json  taskbench-results.md
sample-usecases/03-regex-generation/: generated-prompts.json  taskbench-results.md
sample-usecases/04-data-cleaning-rules/: generated-prompts.json  taskbench-results.md
src/taskbench/: prompt_generator.py  ui_api.py  usecase.py  usecase_parser.py
tasks/: lecture_analysis.yaml  template.yaml
tests/: test_api.py  test_cost.py  test_executor.py  test_judge.py  test_models.py  test_task.py
tests/fixtures/: invalid_task.yaml  sample_transcript.txt  valid_task.yaml
usecases/: concepts_extraction.yaml
(+50 files in other folders)
